<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- general -->
    <string name="app_name">TorrentFinder</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <!-- actions -->
    <string name="action_settings">Settings</string>
    <string name="action_email">Email</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_browse">Browse</string>
    <string name="action_add">Add</string>
    <string name="action_set_all_downloaded">Set All Downloaded</string>

    <!-- dialog -->
    <string name="dialog_add_show_title">Add Show</string>
    <string name="dialog_label_print_title">Print Title:</string>
    <string name="dialog_label_torrent_search">Torrent Search:</string>
    <string name="dialog_label_episode_list">Episode List:</string>

    <!-- settings -->
    <string name="settings_label_email">Email Address</string>
    <string name="settings_label_single_episode">Show Single Episode:</string>
    <string name="settings_description_single_episode">Only find torrents for the first episode which has not been downloaded instead of all undownloaded episodes</string>
    <string name="settings_label_torrent_service">Torrent Service</string>
    <string name="settings_label_episode_list_service">Episode List Service</string>
    <string name="settings_label_the_pirate_bay_url">ThePirateBay URL</string>
    <string name="settings_label_kickass_url">Kickass URL</string>
    <string name="settings_label_torrent_result_limit">Torrent Result Limit</string>
</resources>
