<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomeActivity">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="always"
        android:title="@string/action_refresh" />

    <item
        android:id="@+id/action_email"
        android:icon="@drawable/ic_action_email"
        android:showAsAction="always"
        android:title="@string/action_email" />

    <item
        android:id="@+id/action_browse"
        android:icon="@drawable/ic_action_collection"
        android:showAsAction="always"
        android:title="@string/action_browse" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" />
</menu>
